[package]
name = "gpui_clock"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.44"
gpui = { git = "https://github.com/zed-industries/zed", branch = "main", features = ["wayland"] }
gpui_platform = { git = "https://github.com/zed-industries/zed", branch = "main", features = ["wayland"] }

[features]
default = ["wayland"]
wayland = []
